# ChangeLog for app-admin/pki-console
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Feb 2010; <slep@gentoo.org> -pki-console-1.2.0.ebuild,
  +pki-console-1.3.0.ebuild:
  version bump

  05 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  initial commit
