@@ -1,4 +1,5 @@
+DIST fedora.png 11606 RMD160 766c23052bd3f6d323e80f4b702e47e31d8b7671 SHA1 61bb2229f459323809bfa4768a0b9928c06bcb63 SHA256 88318e1704924c7d33aac3e37c195f99d29eb6f6f6235f254f254881257bbb0e
 DIST pki-console-1.3.0.tar.gz 498731 RMD160 7db7937f3670eec3de80bdebd800149547b28bd9 SHA1 e1408204b39ac8767002ac131d2d62c05b028490 SHA256 77164ff0fc462331eaf3ab4164895ade63eed2cf6f76e387d91f7a56e5f10b4f
-EBUILD pki-console-1.3.0.ebuild 1551 RMD160 cd8a02583dd133070226049934f8c3fdc51eea7a SHA1 4c700788bd67cefe769c840bb414c7652f7dee55 SHA256 ca198ccf7f3c8a0272b6ad97a5c98b9f50e754ae55d0b24409f6b2b8d63a8d22
-MISC ChangeLog 309 RMD160 e0e8c3f6bd4e6460fd0ac6a4a2e9a73b43b5bebc SHA1 8dbf8930e8e48b167cbb16ac8385c71c4e16bcf3 SHA256 bfdff94fd2382a9a49c876da0ce8f24558a8faa99b6e67baa1d7b53cec0b200b
+EBUILD pki-console-1.3.0.ebuild 1653 RMD160 cc4837dee1516b67599706b1803067e381f7d0cb SHA1 53bde15a8638b5fc01835c99fa58dec81d644d2a SHA256 43b43a1bec0d4eb5672e8503846445eafe5f5931e32d85b4083187e355433737
+MISC ChangeLog 397 RMD160 180b564804415df3c4c66404b39ba9ef7cc88dbb SHA1 d0dba2c015861c86a398fd1abfa5c7c4c03625ee SHA256 358a93d0a86e0f5a8413f2d3faf9db0020e5a31ed081f9290da96fbbaf864113
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
