@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Apr 2010; <slep@gentoo.org> pki-console-1.3.0.ebuild:
+  add fedora.png to SRC_URI
+
   13 Feb 2010; <slep@gentoo.org> -pki-console-1.2.0.ebuild,
   +pki-console-1.3.0.ebuild:
   version bump
